--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -3,8 +3,9 @@ on:
   workflow_dispatch:
 
   push:
-    branches:
-      - "master"
+    # TODO: uncomment this when ready
+    # branches:
+    #   - "master"
 jobs:
   tests-bash:
     strategy:
