--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -87,7 +87,7 @@ jobs:
       - name: Install Rust
         run: |
           echo "fetching latest stable release of rust"
-          curl https://sh.rustup.rs -sSf -y | sh
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           echo "running cargo env"
           source $HOME/.cargo/env
           echo "running target add wasm-pack"
