use actions run commands

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -85,13 +85,18 @@ jobs:
           curl -fsSL https://deb.nodesource.com/setup_16.x | sudo -E bash -
           sudo apt-get install -y nodejs
       - name: Install Rust
-        run: |
-          echo "fetching latest stable release of rust"
-          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-          echo "running cargo env"
-          source $HOME/.cargo/env
-          echo "running target add wasm-pack"
-          rustup target add -y wasm32-unknown-unknown
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: wasm32-unknown-unknown
+      # - name: Install Rust
+      #   run: |
+      #     echo "fetching latest stable release of rust"
+      #     curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+      #     echo "running cargo env"
+      #     source $HOME/.cargo/env
+      #     echo "running target add wasm-pack"
+      #     rustup target add -y wasm32-unknown-unknown
       - name: Install modules
         run: |
           npm install
