--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -89,11 +89,11 @@ jobs:
         with:
           toolchain: stable
           target: wasm32-unknown-unknown
-      - name: Add Windows rustup path to WSL ubuntu PATH
+      - name: Add Windows rustup path to WSL ubuntu bashrc as alias
         run: |
           echo $PWD
-          echo 'export PATH="$PATH:/mnt/c/Users/runneradmin/.cargo/bin/rustup.exe"' >> ~/.bashrc
-          source ~/.bashrc
+          echo "alias rustup='/mnt/c/Users/runneradmin/.cargo/bin/rustup.exe'" >> $HOME/.bashrc
+          source $HOME/.bashrc
       # TODO: might need cmake install too
       # - name: Install Rust
       #   run: |
